--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,19 @@
     </head>
     <body>
         <div id='wrap'>
+            <div id='promo'>
+                <div class='container'>
+                    <div clas='row'>
+                        <div class='span12'>
+                            <p>
+                                <a href='/enroll' target='blank'>
+                                    <marquee behavior="scroll">Now accepting applications for the 2017-18 school year! Click here to enroll your child.</marquee>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id='top'></div>
             <div class='container' id='header'>
                 <div class='row'>
@@ -100,6 +113,8 @@
                                     <span class='caret'></span>
                                 </a>
                                 <ul class="dropdown-menu">
+                                    <li><a href="/enroll">Enroll Your Child</a></li>
+                                    <li class='divider'></li>
                                     <li><a href="/get_involved/work_at_prodeo">Work at Prodeo</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/get_involved/apply_to_tutor">Apply to Tutor</a></li>
