--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
                     <div clas='row'>
                         <div class='span12'>
                             <p>
-                                <a href='/enroll' target='blank'>
+                                <a href='/enroll'>
                                     <marquee behavior="scroll">Now accepting applications for the 2017-18 school year! Click here to enroll your child.</marquee>
                                 </a>
                             </p>
