Public docs and info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,8 @@
                                     <li><a href="/about/advisory_council">Our Advisory Council</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/about/partners">Our Partners</a></li>
+                                    <li class='divider'></li>
+                                    <li><a href="/about/documents">Documents and Information</a></li>
                                 </ul>
                             </li>
                             <li class='dropdown-submenu'>
