--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ujs/1.2.2/rails.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="/assets/main.js?{{site.time | date: '%s'}}" type="text/javascript"></script>
+        <script src="https://global.localizecdn.com/localize.js" type="text/javascript"></script>
     </head>
     <body>
         <div id='wrap'>
