--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ujs/1.2.2/rails.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="/assets/main.js?{{site.time | date: '%s'}}" type="text/javascript"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/livequery/1.1.1/jquery.livequery.min.js" type="text/javascript"></script>
         <script src="https://global.localizecdn.com/localize.js" type="text/javascript"></script>
+        <script src="/assets/main.js?{{site.time | date: '%s'}}" type="text/javascript"></script>
     </head>
     <body>
         <div id='wrap'>
