--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <title>
-            {{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}
+            {% if page.title %}
+                {% assign title = page.title | append: ' - ' | append: site.title %}
+            {% else %}
+                {% assign title = site.title %}
+            {% endif %}
+            {{ title }}
         </title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="/assets/main.css?{{site.time | date: '%s'}}" rel="stylesheet" type="text/css">
@@ -13,6 +18,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/livequery/1.1.1/jquery.livequery.min.js" type="text/javascript"></script>
         <script src="https://global.localizecdn.com/localize.js" type="text/javascript"></script>
         <script src="/assets/main.js?{{site.time | date: '%s'}}" type="text/javascript"></script>
+        <meta property="og:title" content="{{ title }}"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:image" content="/assets/logo.png"/>
+        <meta property="og:url" content="http://prodeoacademy.org/{{ page.url }}"/>
+        <meta property="og:locale" content="en_US"/>
+        <meta property="og:locale:alternate" content="es_ES"/>
     </head>
     <body>
         <div id='wrap'>
