--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -155,7 +155,7 @@
                     <span>&copy; Copyright {{ site.time | date: '%Y' }} Prodeo Academy</span>
                 </div>
                 <div class='pull-right'>
-                    <span>1555 40th Ave NE Minneapolis 55421</span>
+                    <span>620 Olson Memorial Highway Minneapolis, MN 55411</span>
                 </div>
             </div>
         </footer>
