Update documents link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
                                     <li class='divider'></li>
                                     <li><a href="/about/partners">Our Partners</a></li>
                                     <li class='divider'></li>
-                                    <li><a href="/about/documents">Documents and Information</a></li>
+                                    <li><a href="https://drive.google.com/drive/u/0/folders/0B9F_q1nOg-J-ZDdzQVF3WWRRQU0" target="blank">Documents and Information</a></li>
                                 </ul>
                             </li>
                             <li class='dropdown-submenu'>
