News and updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,8 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/about/who_we_are">Who We Are</a></li>
                                     <li class='divider'></li>
+                                    <li><a href="/about/news">News and Updates</a></li>
+                                    <li class='divider'></li>
                                     <li><a href="/about/history">Our History</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/about/staff">Our Staff</a></li>
