--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -157,7 +157,7 @@
                     <span>&copy; Copyright {{ site.time | date: '%Y' }} Prodeo Academy</span>
                 </div>
                 <div class='pull-right'>
-                    <span>620 Olson Memorial Highway Minneapolis, MN 55411</span>
+                    <span>620 Olson Memorial Highway Minneapolis, MN 55411<br />170 Rose Avenue West, St. Paul, MN 55117.</span>
                 </div>
             </div>
         </footer>
