--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class='pull-right'>
                     <span>620 Olson Memorial Highway Minneapolis, MN 55411
-                        </div>
+                        </div><br />
                      <div class='pull-right'>170 Rose Avenue West, St. Paul, MN 55117</span>
                 </div>
             </div>
