--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -157,9 +157,10 @@
                     <span>&copy; Copyright {{ site.time | date: '%Y' }} Prodeo Academy</span>
                 </div>
                 <div class='pull-right'>
-                    <span>620 Olson Memorial Highway Minneapolis, MN 55411
+                    <span>620 Olson Memorial Highway Minneapolis, MN 55411</span>
                         </div><br />
-                     <div class='pull-right'>170 Rose Avenue West, St. Paul, MN 55117</span>
+                     <div class='pull-right'>
+                         <span>170 Rose Avenue West, St. Paul, MN 55117</span>
                 </div>
             </div>
         </footer>
