--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,13 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/student_life/typical_day">A Typical Day</a></li>
                                     <li class='divider'></li>
-                                    <li><a href="/student_life/school_calendar">School Calendar</a></li>
+                                    <li>School Calendars</li>
+                                    <li class='divider'></li>
+                                        <li><a href="/student_life/school_calendar"> - Minneapolis Primary (PK-2nd)</a></li>
+                                    <li class='divider'></li>
+                                        <li><a href="/student_life/school_calendar"> - Minneapolis Elementary (3rd-5th)</a></li>
+                                    <li class='divider'></li>
+                                        <li><a href="/student_life/school_calendar" - St. Paul Primary (K-1st)</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/student_life/academics">Academics</a></li>
                                     <li class='divider'></li>
