--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,14 +106,16 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/student_life/typical_day">A Typical Day</a></li>
                                     <li class='divider'></li>
-                                    <li><font color="white">&nbsp&nbspSchool Calendars</font></li>
+                                    <li><a href="/student_life/school_calendar">Calendars</a></li>
                                     <li class='divider'></li>
+                                    <!---
                                         <li><a href="/student_life/school_calendar"> - Minneapolis Primary (PK-2nd)</a></li>
                                     <li class='divider'></li>
                                         <li><a href="/student_life/school_calendar"> - Minneapolis Elementary (3rd-5th)</a></li>
                                     <li class='divider'></li>
                                         <li><a href="/student_life/school_calendar"> - St. Paul Primary (K-1st)</a></li>
                                     <li class='divider'></li>
+--->
                                     <li><a href="/student_life/academics">Academics</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/student_life/community_meeting">Community Meeting</a></li>
