--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,19 +103,19 @@
                                     Student Life
                                     <span class='caret'></span>
                                 </a>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu">  <!---
                                     <li><a href="/student_life/typical_day">A Typical Day</a></li>
+                                    <li class='divider'></li>--->
+                                    <li><font color="white">&nbsp&nbsp&nbsp&nbspCalendars</li>
                                     <li class='divider'></li>
-                                    <li><a href="/student_life/school_calendar">Calendars</a></li>
+                                  
+                                        <li><a href="/student_life/mpls_elementary">&nbsp&nbsp - Minneapolis Primary (PK-2nd)</a></li>
                                     <li class='divider'></li>
-                                    <!---
-                                        <li><a href="/student_life/school_calendar"> - Minneapolis Primary (PK-2nd)</a></li>
+                                        <li><a href="/student_life/mpls_primary">&nbsp&nbsp - Minneapolis Elementary (3rd-5th)</a></li>
                                     <li class='divider'></li>
-                                        <li><a href="/student_life/school_calendar"> - Minneapolis Elementary (3rd-5th)</a></li>
+                                        <li><a href="/student_life/stpaul_primary">&nbsp&nbsp - St. Paul Primary (K-1st)</a></li>
                                     <li class='divider'></li>
-                                        <li><a href="/student_life/school_calendar"> - St. Paul Primary (K-1st)</a></li>
-                                    <li class='divider'></li>
---->
+
                                     <li><a href="/student_life/academics">Academics</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/student_life/community_meeting">Community Meeting</a></li>
