--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,14 +106,14 @@
                                 <ul class="dropdown-menu">  <!---
                                     <li><a href="/student_life/typical_day">A Typical Day</a></li>
                                     <li class='divider'></li>--->
-                                    <li><font color="white">&nbsp&nbsp&nbsp&nbspCalendars</li>
+                                    <li><font color="white">Calendars</li>
                                     <li class='divider'></li>
                                   
-                                        <li><a href="/student_life/mpls_elementary">&nbsp&nbsp - Minneapolis Primary (PK-2nd)</a></li>
+                                        <li><a href="/student_life/mpls_elementary"> - Minneapolis Primary (PK-2nd)</a></li>
                                     <li class='divider'></li>
-                                        <li><a href="/student_life/mpls_primary">&nbsp&nbsp - Minneapolis Elementary (3rd-5th)</a></li>
+                                        <li><a href="/student_life/mpls_primary"> - Minneapolis Elementary (3rd-5th)</a></li>
                                     <li class='divider'></li>
-                                        <li><a href="/student_life/stpaul_primary">&nbsp&nbsp - St. Paul Primary (K-1st)</a></li>
+                                        <li><a href="/student_life/stpaul_primary"> - St. Paul Primary (K-1st)</a></li>
                                     <li class='divider'></li>
 
                                     <li><a href="/student_life/academics">Academics</a></li>
