--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/student_life/typical_day">A Typical Day</a></li>
                                     <li class='divider'></li>
-                                    <font color="white">&nbsp&nbsp&nbsp<li>Calendars</li></font>
+                                    <font color="white">&nbsp&nbsp&nbsp&nbsp&nbspCalendars</font>
                                     <li class='divider'></li>
                                         <li><a href="/student_life/mpls_primary"> - Minneapolis Primary (PK-2nd)</a></li>
                                     <li class='divider'></li>
