--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,8 +73,16 @@
                                     <li><a href="/about/news">News and Updates</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/about/history">Our History</a></li>
+
                                     <li class='divider'></li>
-                                    <li><a href="/about/staff">Our Staff</a></li>
+                                    <font color="white">&nbsp&nbsp&nbsp&nbsp&nbspStaff</font>
+                                        <li><a href="/about/staff_network"> - Network</a></li>
+                                    <li class='divider'></li>
+                                        <li><a href="/about/staff_stpaul"> - St. Paul</a></li>
+                                    <li class='divider'></li>
+                                        <li><a href="/about/staff_minneapolis_primary"> - Mpls Primary</a></li>
+                                         <li class='divider'></li>
+                                        <li><a href="/about/staff_minneapolis_elementary"> - Mpls Elementary</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/about/board">Our Board</a></li>
                                     <li class='divider'></li>
