--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -146,7 +146,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/enroll">Enroll Your Child</a></li>
                                     <li class='divider'></li>
-                                    <li><a href="/get_involved/work_at_prodeo">Work at Prodeo</a></li>
+                                    <li><a href="https://prodeo-academy.breezy.hr">Work at Prodeo</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/get_involved/apply_to_tutor">Apply to Tutor</a></li>
                                     <li class='divider'></li>
