--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142702392-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142702392-1');
+</script>
         <title>
             {% if page.title %}
                 {% assign title = page.title | append: ' - ' | append: site.title %}
@@ -57,7 +66,7 @@
                                     <div class='fb-like' data-href='https://www.facebook.com/prodeoacademy' data-layout='button_count' data-send='false' data-show-faces='false' data-width='450'></div>
                                 </div>
                                 <div class='pull-left' id='twitter'>
-                                    <a class='twitter-follow-button' data-show-count='false' href='https://twitter.com/ProdeoAcademy'>Follow @ProdeoAcademy</a>
+                                    <a class='twitter-follow-button' data-show-count='false' href='https://twitter.com/ProdeoAcademy'></a>
                                 </div>
                             </div>
                         </div>
