--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -123,6 +123,8 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/student_life/typical_day">A Typical Day</a></li>
                                     <li class='divider'></li>
+                                    <li><a href="https://bit.ly/2xRPySy">Back to School</a></li>
+                                    <li class='divider'></li>
                                     <font color="white">&nbsp&nbsp&nbsp&nbsp&nbspCalendars</font>
 
                                         <li><a href="/student_life/mpls_primary"> - Minneapolis Primary (PK-2nd)</a></li>
