--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,8 +128,9 @@
                                     <font color="white">&nbsp&nbsp&nbsp&nbsp&nbspCalendars</font>
 
                                         <li><a href="/student_life/mpls_primary"> - Minneapolis Primary (PK-2nd)</a></li>
- 
+
                                         <li><a href="/student_life/mpls_elementary"> - Minneapolis Elementary (3rd-5th)</a></li>
+                                         <li><a href="/student_life/mplsmiddle"> - Minneapolis Middle (6th-8th)</a></li>
 
                                         <li><a href="/student_life/stpaul_primary"> - St. Paul Primary (K-1st)</a></li>
                                     <li class='divider'></li>
